# ROMO-B

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  ROMO-B_manual_detailed_extraction.md  ROMO-B_manual_verified_complete.md
.github/: CODEOWNERS
config/: hardware.example.yaml
dependencies/: bootstrap-requirements.txt  lock.yaml  vendor.repos
docs/: architecture.md  autoware.md  autoware_field_checklist.md  hardware_acceptance.md  operations.md  status.md
openarm/: README.md
robot_ws/src/romo_b_autoware/: package.xml  setup.cfg  setup.py
robot_ws/src/romo_b_autoware/config/: euclidean_cluster.yaml  object_tracker.yaml  speed_limit_guard.yaml  trajectory_follower.yaml  vehicle_interface.yaml
robot_ws/src/romo_b_autoware/launch/: field.launch.py  perception.launch.py  planning_sim.launch.py
robot_ws/src/romo_b_autoware/romo_b_autoware/: __init__.py  control_math.py  kinematic_bridge.py  localization_interface.py  object_markers.py  object_tracker.py  occupancy_grid_republisher.py  speed_limit_guard.py  tracking.py  trajectory_follower.py  vector_map_startup_guard.py  vehicle_interface.py
robot_ws/src/romo_b_autoware/test/: test_control_math.py  test_tracking.py
robot_ws/src/romo_b_base/: CMakeLists.txt  package.xml
robot_ws/src/romo_b_base/include/romo_b_base/: protocol.hpp
robot_ws/src/romo_b_base/src/: protocol.cpp  serial_bridge.cpp
robot_ws/src/romo_b_base/test/: test_protocol.cpp
robot_ws/src/romo_b_bringup/: CMakeLists.txt  package.xml
robot_ws/src/romo_b_bringup/config/: ekf.yaml  imu_normalizer.yaml  livox_mid360.template.json  localization.yaml  localization_cloud_filter.yaml  pointcloud_filter.yaml
robot_ws/src/romo_b_bringup/launch/: field_navigation.launch.py  hardware.launch.py  localization.launch.py  localization_replay.launch.py  mapping_live.launch.py  mapping_offline.launch.py  robot_control.launch.py
robot_ws/src/romo_b_bringup/rviz/: mapping.rviz  navigation.rviz
robot_ws/src/romo_b_description/: CMakeLists.txt  package.xml
robot_ws/src/romo_b_description/config/: simulator_model.param.yaml  vehicle_info.param.yaml
robot_ws/src/romo_b_description/launch/: description.launch.py
robot_ws/src/romo_b_description/rviz/: romo_b.rviz
robot_ws/src/romo_b_description/urdf/: romo_b.urdf.xacro  vehicle.xacro
robot_ws/src/romo_b_launch/: CMakeLists.txt  package.xml
robot_ws/src/romo_b_launch/launch/: vehicle_interface.launch.xml
robot_ws/src/romo_b_msgs/: CMakeLists.txt  package.xml
robot_ws/src/romo_b_msgs/msg/: PlatformStatus.msg
robot_ws/src/romo_b_navigation/: CMakeLists.txt  costmap_plugins.xml  package.xml
robot_ws/src/romo_b_navigation/behavior_trees/: navigate_through_poses_forward_only.xml  navigate_to_pose_forward_only.xml
robot_ws/src/romo_b_navigation/config/: collision_monitor.yaml  nav2.yaml  twist_mux.yaml  velocity_smoother.yaml
robot_ws/src/romo_b_navigation/config/maps/: empty.pgm  empty.yaml
robot_ws/src/romo_b_navigation/config/waypoints/: example.yaml
robot_ws/src/romo_b_navigation/include/romo_b_navigation/: transient_obstacle_layer.hpp
robot_ws/src/romo_b_navigation/launch/: navigation.launch.py  safety_pipeline.launch.py
robot_ws/src/romo_b_navigation/src/: safe_command_heartbeat.cpp  transient_obstacle_layer.cpp
robot_ws/src/romo_b_operator_ui/: package.xml  setup.cfg  setup.py
robot_ws/src/romo_b_operator_ui/romo_b_operator_ui/: __init__.py  model.py  openarm_control.py  operations.py  server.py
robot_ws/src/romo_b_operator_ui/romo_b_operator_ui/web_dist/: index.html
robot_ws/src/romo_b_operator_ui/romo_b_operator_ui/web_dist/assets/: index-B2xiscPw.js  index-B8S65HKb.css  index-BEbo_5DC.js  index-BI1VqzKh.js  index-CZItCKwB.js  index-Cy7012oX.css  index-D5K_sf4Z.css  index-D97YTNEb.js  index-DB2tmfVd.js  index-DDcor93n.js  index-DpQdGT-A.css  index-DsdDRMbw.js  index-OBEFrK_n.css  index-eYlHsnmY.js  index-q6LF17z9.css
robot_ws/src/romo_b_operator_ui/test/: test_openarm_control.py  test_operations.py  test_operator_model.py
robot_ws/src/romo_b_operator_ui/web/: .npmrc  AGENTS.md  design-qa.md  index.html  package-lock.json  package.json  vite.config.mjs
robot_ws/src/romo_b_operator_ui/web/src/: App.jsx  styles.css
robot_ws/src/romo_b_perception/: CMakeLists.txt  package.xml
robot_ws/src/romo_b_perception/include/romo_b_perception/: imu_normalization.hpp
robot_ws/src/romo_b_perception/src/: imu_normalizer.cpp  pcd_to_occupancy.cpp  pointcloud_filter.cpp
robot_ws/src/romo_b_perception/test/: check_occupancy.py  fixture.g2o  fixture.pcd  test_imu_normalization.cpp
robot_ws/src/romo_b_sim/: package.xml  setup.cfg  setup.py
robot_ws/src/romo_b_sim/launch/: simulation.launch.py
robot_ws/src/romo_b_sim/romo_b_sim/: pcu_simulator.py  protocol.py
robot_ws/src/romo_b_sim/test/: test_protocol.py
robot_ws/src/romo_b_waypoints/: package.xml  setup.cfg  setup.py
robot_ws/src/romo_b_waypoints/romo_b_waypoints/: model.py  node.py
robot_ws/src/romo_b_waypoints/test/: test_model.py
scripts/: analyze_localization_bag.py  apply_autoware_overrides.sh  bench_speed_calibration.py  build_all.sh  check_autoware_localization_interface.py  check_autoware_perception.py  check_autoware_planning.py  check_autoware_safety_gates.py  check_autoware_waypoint_sender.py  check_cmd_pipeline.py  check_mapping_calibration.py  check_mppi_avoidance.py  check_nav2_plan.py  check_rotation_shim.py  check_tracked_file_sizes.sh  check_yaw_sign.py  customize_autoware_rviz.py  doctor.sh  fetch_dependencies.sh  generate_autoware_corridor_map.py  generate_hardware_config.py  install_openarm_can_helper.sh  install_operator_ui_service.sh  onboard_hardware.sh  openarm_can_link.sh  prepare_autoware_map.sh  record_mapping_bag.sh  register_artifact.sh  run_autoware_field.sh  run_autoware_localization_interface_check.sh  run_autoware_perception_check.sh  run_autoware_planning_check.sh  run_autoware_planning_sim.sh  run_autoware_safety_gate_check.sh  run_autoware_validation.sh  run_autoware_waypoint_sender_check.sh  run_field_navigation.sh  run_live_mapping.sh  run_localization_replay.sh  (+16 more)
(+228 files in other folders)
