<?xml version="1.0"?>
<package format="3">
  <name>romo_b_autoware</name>
  <version>0.1.0</version>
  <description>Autoware Universe adapters, low-speed follower, and obstacle tracking for ROMO-B.</description>
  <maintainer email="futile-nutmegs0d@icloud.com">Jang HyunSeo</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>autoware_adapi_v1_msgs</exec_depend>
  <exec_depend>autoware_control_msgs</exec_depend>
  <exec_depend>autoware_euclidean_cluster_object_detector</exec_depend>
  <exec_depend>autoware_localization_msgs</exec_depend>
  <exec_depend>autoware_perception_msgs</exec_depend>
  <exec_depend>autoware_planning_msgs</exec_depend>
  <exec_depend>autoware_vehicle_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>romo_b_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
