<?xml version="1.0"?>
<package format="3">
  <name>romo_b_base</name>
  <version>0.1.0</version>
  <description>Lifecycle USB-RS232 bridge and protocol library for ROMO-B.</description>
  <maintainer email="futile-nutmegs0d@icloud.com">Jang HyunSeo</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>romo_b_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
