<?xml version="1.0"?>
<package format="3">
  <name>romo_b_launch</name>
  <version>0.1.0</version>
  <description>Autoware vehicle launch contract for the ROMO-B platform.</description>
  <maintainer email="futile-nutmegs0d@icloud.com">Jang HyunSeo</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
