<?xml version="1.0"?>
<package format="3">
  <name>romo_b_perception</name>
  <version>0.1.0</version>
  <description>Mid-360 point cloud filtering and PCD-to-occupancy tools for ROMO-B.</description>
  <maintainer email="futile-nutmegs0d@icloud.com">Jang HyunSeo</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
