<?xml version="1.0"?>
<package format="3">
  <name>romo_b_sim</name>
  <version>0.1.0</version>
  <description>PTY-based PCU simulator for hardware-free ROMO-B integration tests.</description>
  <maintainer email="futile-nutmegs0d@icloud.com">Jang HyunSeo</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>romo_b_base</exec_depend>
  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
