<?xml version="1.0"?>
<package format="3">
  <name>romo_b_waypoints</name>
  <version>0.1.0</version>
  <description>YAML and RViz waypoint manager using Nav2 NavigateThroughPoses.</description>
  <maintainer email="futile-nutmegs0d@icloud.com">Jang HyunSeo</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
